--- a/index.html
+++ b/index.html
@@ -103,17 +103,17 @@
 		   <h3>Contact.<hr></h3>
 		   <p>Feel free to contact me on my social media.</p>
 		    <div class="social-media">
-			  <a href="#" target="_blank"><i class='fab fa-codepen'></i></a>
-			  <a href="#" target="_blank"><i class='fab fa-twitter'></i></a>
-			  <a href="#" target="_blank"><i class='fab fa-github'></i></a>
-			  <a href="#" target="_blank"><i class='fab fa-linkedin-in'></i></a>
-			  <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+			  <a href="https://instagram.com/sufiOmga" target="_blank"><i class='fab fa-codepen'></i></a>
+			  <a href="https://twitter.com/sufiOmga" target="_blank"><i class='fab fa-twitter'></i></a>
+			  <a href="https://github.com/sufiOmga" target="_blank"><i class='fab fa-github'></i></a>
+			  <a href="https://sufiOmga.github.io" target="_blank"><i class='fab fa-linkedin-in'></i></a>
+			  <a href="https://www.youtube.com/channel/UCIWZE42s0pSC4emzg_6cnIQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
 		    </div>
 		  </div>
 
 	</main>
 	  <footer class="copyright">© 2020 
-		  <a href="https://repl.it/@lilykhan" target="_blank"> Lilykhan.</a>
+		  <a href="https://repl.it/@sufiOmga" target="_blank"> Lilykhan.</a>
      </footer>
 	  
   </div>
