--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 	</main>
 	  <footer class="copyright">© 2020 
-		  <a href="https://repl.it/@sufiOmga" target="_blank"> Lilykhan.</a>
+		  <a href="https://repl.it/@sufiOmga" target="_blank"> sufiOmga.</a>
      </footer>
 	  
   </div>
